# mkit-idv-next

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DDD_REFACTORING_GUIDE.md  DOCKERFILE_OPTIMIZATION.md  Dockerfile  Dockerfile.prod  GEMINI.md  Makefile  PROJECT_CONTEXT_MEMORY.md  QWEN.md  README.md  SESSIONS_DOMAIN_COMPLETE.md  Servers_DOMAIN_COMPLETE.md  docker-compose.dev.yml  docker-compose.yml  login.pen  project.md  template.pen  workflows_user.md
.github/agents/: documentation.agent.md
.github/instructions/: copilot-instructions.md  project.instructions.md
backend/: ALEMBIC_SETUP.md  alembic.ini  mlog.yaml  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_initial_schema.py  5b8976040c0b_create_sessions_table.py  61a351301a18_rename_sessions_to_orders.py  829e1fc1dfcf_simplify_accounts_and_add_processed_flag.py  981cbaae32a1_initial_migration_creating_all_tables.py  abbbf70fc779_simplify_accounts_model.py  bd145a9ec91e_refactor_bindings_add_session_and_.py  c9de36a569ce_add_processed_reseller_and_token_fields.py  e11b9852fac9_add_name_and_delay_per_hit_to_servers_.py
backend/app/: __init__.py  main.py  orchestrator_main.py
backend/app/api/: __init__.py  deps.py  route_accounts.py  route_bindings.py  route_orchestration.py  route_orders.py  route_servers.py  route_sessions.py  route_tools.py  route_transactions.py  servers.py
backend/app/api/schemas/: accounts.py  bindings.py  orders.py  servers.py  sessions.py
backend/app/application/bindings/: __init__.py  commands.py  handlers.py  queries.py  query_handlers.py
backend/app/application/servers/: __init__.py  commands.py  handlers.py  queries.py  query_handlers.py
backend/app/application/sessions/: __init__.py  commands.py  handlers.py  queries.py  query_handlers.py
backend/app/core/: clients.py  log_config.py  settings.py
backend/app/core/exceptions/: __init__.py  base.py  handlers.py
backend/app/core/middlewares/: __init__.py  req_logging.py  traceid.py
backend/app/database/: __init__.py  db_errors.py  session.py  tables.py
backend/app/domain/: __init__.py
backend/app/domain/bindings/: __init__.py  entities.py  events.py  exceptions.py  services.py
backend/app/domain/common/: __init__.py  entities.py  events.py  exceptions.py  value_objects.py
backend/app/domain/servers/: __init__.py  entities.py  events.py  exceptions.py  services.py  value_objects.py
backend/app/domain/sessions/: __init__.py  entities.py  events.py  exceptions.py  services.py  value_objects.py
backend/app/models/: __init__.py  accounts.py  bindings.py  mixins.py  orders.py  servers.py  sessions.py  statuses.py  steps.py  transaction_statuses.py  transactions.py
backend/app/repos/: __init__.py  account_repo.py  base.py  binding_repo.py  order_repo.py  server_repo.py  session_repo.py  transaction_repo.py
backend/app/services/: __init__.py
backend/app/services/accounts/: __init__.py  crud_services.py  schemas.py  service.py  services.py
backend/app/services/bindings/: __init__.py  schemas.py  service.py
backend/app/services/idv/: __init__.py  service.py
backend/app/services/orchestration/: __init__.py  redis_registry.py  registry.py  runtime.py  schemas.py  service.py
backend/app/services/orders/: service.py
backend/app/services/servers/: __init__.py  schemas.py  service.py
backend/app/services/transactions/: __init__.py  schemas.py  service.py
backend/app/services/workflow/: __init__.py  guard.py
backend/scripts/: find_missing_docstrings.py
backend/tests/api/: test_servers_routes.py
backend/tests/domain/servers/: __init__.py  test_entities.py  test_services.py
backend/tests/services/: test_servers_service.py
docs/architecture/: high-throughput-orchestration-plan.md  transaction-orchestration.md  worker-runtime-storage.md
frontend/: ERROR_HANDLING_GUIDE.md  app.js  index.html  package-lock.json  package.json  style.css  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  input.css  main.tsx
frontend/src/components/error/: ErrorBanner.tsx  ErrorBoundary.tsx  ErrorDialog.tsx  index.ts
frontend/src/components/ui/: table.tsx
frontend/src/features/accounts/: types.ts
frontend/src/features/accounts/components/: AccountForms.tsx  AccountsTable.tsx
frontend/src/features/accounts/hooks/: useAccounts.ts
frontend/src/features/accounts/pages/: AccountsPage.tsx
frontend/src/features/bindings/: types.ts
frontend/src/features/bindings/components/: BindingForms.tsx  BindingsTable.tsx
frontend/src/features/bindings/hooks/: useBindings.ts
frontend/src/features/bindings/pages/: BindingsPage.tsx
frontend/src/features/orchestration/: types.ts
frontend/src/features/orchestration/hooks/: useOrchestration.ts
frontend/src/features/orchestration/pages/: OrchestrationPage.tsx
frontend/src/features/orders/: types.ts
frontend/src/features/orders/components/: AddAccountsDialog.tsx  OrderForms.tsx  OrdersTable.tsx
frontend/src/features/orders/hooks/: useOrders.ts
frontend/src/features/orders/pages/: OrdersPage.tsx
frontend/src/features/servers/: types.ts
frontend/src/features/servers/components/: ServerForms.tsx  ServersTable.tsx
frontend/src/features/servers/hooks/: useServers.ts
frontend/src/features/servers/pages/: ServersPage.tsx
frontend/src/features/sessions/: types.ts
frontend/src/features/sessions/components/: SessionForms.tsx  SessionsTable.tsx
frontend/src/features/sessions/hooks/: useSessions.ts
frontend/src/features/sessions/pages/: SessionsPage.tsx
frontend/src/features/transactions/: types.ts
frontend/src/features/transactions/components/: TransactionForms.tsx  TransactionsTable.tsx
frontend/src/features/transactions/hooks/: useTransactions.ts
frontend/src/features/transactions/pages/: TransactionsPage.tsx
frontend/src/hooks/: index.ts  useApiError.ts
frontend/src/types/: server.ts
